--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: dalipush
+name: simple_alipush
 description: 一款集成了阿里推送的flutter插件，使用起来不是很简单，需要在你flutter的android项目中配置一个自己的application，并且在android app的gradle文件中做几个占位符，具体可以看reade.me
-version: 0.1.1
-author: brzhang  <1595819400@qq.com>
+version: 0.1.0
+author: jianxia84  <jianxia84@163.com>
 homepage: https://cloud.tencent.com/developer/user/1203298
 
 environment:
