--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: simple_alipush
-description: 一款集成了阿里推送的flutter插件，使用起来不是很简单，需要在你flutter的android项目中配置一个自己的application，并且在android app的gradle文件中做几个占位符，具体可以看reade.me
+description: 阿里推送的flutter插件，forked from https://github.com/bravekingzhang/dalipush
 version: 0.1.0
 author: jianxia84  <jianxia84@163.com>
-homepage: https://cloud.tencent.com/developer/user/1203298
+homepage: https://github.com/jianxia84/dalipush
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -19,7 +19,6 @@ flutter:
   plugin:
     androidPackage: com.brzhang.dalipush
     pluginClass: DalipushPlugin
-
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
@@ -30,7 +29,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
